Fix animation mobile menu

--- a/src/components/Header/RightMenu/RightMenu.module.sass
+++ b/src/components/Header/RightMenu/RightMenu.module.sass
@@ -234,7 +234,6 @@
    bottom: -100%
    left: 0
    width: 90%
-   height: 83%
    background: #fff
    transition: bottom 0.4s ease-in-out
    padding: 15px
@@ -317,7 +316,7 @@
       width: 50%
       height: calc(100vh - 138px)
       &.show
-         top: 138px
+         bottom: 0
 
 @media screen and (max-width: 776px) 
    .menuMobileIcon
@@ -327,7 +326,7 @@
       width: 90%
       height: calc(100vh - 140px)
       &.show
-         top: 140px
+         bottom: 0
    .searchWrapper
       .searchBtn
          background: #ff6955
